# Agentic-RAG

./: .gitignore  README.md  docker-compose.yml  extract_pdf.py  pan2025_config.txt  pyproject.toml  read_pdf_target.py  test_ddg_loop.py
ai_detection/: train.py  train_best_bert.py
app/: Dockerfile  config.py  database.py  main.py  requirements.txt
app/routes/: documents.py  health.py  query.py
app/services/: ai_detector.py  chunker.py  llm_service.py  minio_service.py  parser.py  retriever.py  source_searcher.py
eval/: eval_dataset.json  evaluate.py
frontend/: Dockerfile  streamlit_app.py
results/: bert_best_summary.csv  eval_results.json
