[project]
name = "agentic-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.5",
    "duckduckgo-search>=8.1.1",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "gunicorn>=25.1.0",
    "minio>=7.2.20",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.9",
    "python-docx>=1.2.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.3.0",
    "streamlit>=1.55.0",
    "torch>=2.11.0",
    "transformers>=5.3.0",
]
